--- a/bulk.yml
+++ b/bulk.yml
@@ -2,11 +2,9 @@
 continue: "true"
 transfer: "ln_s"
 exclude: "clientpath"
-skip: "all"
+skip: "checksum"
 logprefix: "logs/"
-output: "yaml"
 parallel_upload: "10"
-parallel_fileset: "10"
 columns:
     - name
     - path
