--- a/screenB/idr0078-screenB-Sac6-render.yml
+++ b/screenB/idr0078-screenB-Sac6-render.yml
@@ -3,14 +3,14 @@ channels:
     1:
         active: true
         color: 00FF00
-        end: 10000.0
-        label: EGFP
+        end: 5000.0
+        label: Sac6-GFP
         start: 100.0
     2:
         active: false
         color: FFFFFFF
         end: 10000.0
-        label: Alexa 647
+        label: Dextran Alexa 647
         start: 3000.0
 greyscale: false
 t: 1
