Include allele column

--- a/screenA/idr0078-screenA-bulkmap-config.yml
+++ b/screenA/idr0078-screenA-bulkmap-config.yml
@@ -70,6 +70,7 @@ columns:
       columns:
         - name: Comment [Allele]
           clientname: Allele
+          include: true
 
 # Advanced options (experimental)
 advanced:
