Fix strain column name

--- a/screenA/idr0078-screenA-bulkmap-config.yml
+++ b/screenA/idr0078-screenA-bulkmap-config.yml
@@ -21,7 +21,7 @@ defaults:
 
 columns:
 
-  - name: Characteristics [Strain]
+  - name: Comment [Strain Identifier]
     clientname: Strain
     include: true
   - name: Experimental Condition [Genotype]
