--- a/screenA/idr0078-screenA-bulkmap-config.yml
+++ b/screenA/idr0078-screenA-bulkmap-config.yml
@@ -54,6 +54,7 @@ columns:
       namespace: openmicroscopy.org/mapr/gene
       columns:
         - name: Comment [Gene Identifier]
+          clientname: Gene Identifier
           include: true
           omitempty: false
         - name: Comment [Gene Identifier]
@@ -62,6 +63,7 @@ columns:
             http://www.yeastgenome.org/locus/{{ value|urlencode }}/overview
           include: true
         - name: Comment [Gene Symbol]
+          clientname: Gene Symbol
           include: true
           omitempty: false
 
