Update annotations and bulkmap config
Update annotations and bulkmap config for screen A and B.

--- a/screenB/idr0078-screenB-bulkmap-config.yml
+++ b/screenB/idr0078-screenB-bulkmap-config.yml
@@ -30,7 +30,8 @@ columns:
 
   - name: Channels
     include: true
-  - name: Quality Control
+  - name: Comment [Image]
+    clientname: Image Comment
     include: true
   - name: Processed Image Channel
     include: true
