--- a/screenA/idr0078-screenA-bulkmap-config.yml
+++ b/screenA/idr0078-screenA-bulkmap-config.yml
@@ -31,9 +31,11 @@ columns:
   - name: Channels
     include: true
   - name: Comment [Channels]
+    clientname: Channels Comment
     include: true
 
-  - name: Quality Control
+  - name: Comment [Image]
+    clientname: Image Comment
     include: true
   - name: Processed Image Channel
     include: true
