--- a/screenA/idr0078-screenA-Snf7-render.yml
+++ b/screenA/idr0078-screenA-Snf7-render.yml
@@ -4,7 +4,7 @@ channels:
         active: true
         color: 00FF00
         end: 150.0
-        label: Snf7-GFP
+        label: Snf7-yEGFP
         start: 0.0
     2:
         active: true
