--- a/screenB/idr0078-screenB-Sac6-render.yml
+++ b/screenB/idr0078-screenB-Sac6-render.yml
@@ -4,7 +4,7 @@ channels:
         active: true
         color: 00FF00
         end: 5000.0
-        label: Sac6-GFP
+        label: Sac6-yEGFP
         start: 100.0
     2:
         active: false
