--- a/screenB/idr0078-screenB-Sla1-render.yml
+++ b/screenB/idr0078-screenB-Sla1-render.yml
@@ -4,7 +4,7 @@ channels:
         active: true
         color: 00FF00
         end: 5000.0
-        label: Sla1-GFP
+        label: Sla1-yEGFP
         start: 100.0
     2:
         active: false
