--- a/screenB/idr0078-screenB-Snf7-render.yml
+++ b/screenB/idr0078-screenB-Snf7-render.yml
@@ -4,7 +4,7 @@ channels:
         active: true
         color: 00FF00
         end: 5000.0
-        label: Snf7-GFP
+        label: Snf7-yEGFP
         start: 100.0
     2:
         active: false
